# local-rlm

./: .env.example  .gitignore  .markdownlint.json  AGILE_PLAN.md  LICENSE  README.md  README.md.backup  list_gemini_models.py  pyproject.toml  pytest.ini
.github/: copilot-instructions.md
configs/: README.md  base.yaml  cost-effective.yaml  high-quality.yaml  hybrid.yaml  local-only.yaml  paper-gpt5.yaml
docs/: AGILE_PLAN.md  CHANGES.md  CONFIGURATION.md  INSTALLATION.md  THEORY.md  WEB_INTERFACE.md
src/: config.py  main.py
src/core/: agent.py  agent_artifacts.py  agent_context.py  agent_fallbacks.py  agent_protocols.py  api_key_manager.py  budget.py  config_loader.py  context_summarizer.py  explorer.py  llm_query.py  logger.py  module_loader.py  parser.py  prompts.py  repl.py  repl_environment.py  repl_executor.py  repl_history.py  repl_sandbox.py  repl_state_manager.py  run_context.py
src/modules/: architect.py  coder.py  coder_compiled.json  compiled_architect.json  delegator.py  responder.py
src/optimization/: compile_architect.py  data.py  metrics.py  optimize_action_format.py  optimize_coder.py  optimizer_factory.py
src/rlm/: __init__.py
src/rlm/services/: __init__.py  config_service.py  session_service.py  task_service.py
src/tools/: search.py
src/web/: README.md  __init__.py  app.py  database.py  dependencies.py  task_runner.py
src/web/routes/: __init__.py  chat.py  configs.py  export.py  sessions.py  share.py  tasks.py  templates.py
src/web/schemas/: __init__.py  chat.py  common.py  configs.py  export.py  sessions.py  tasks.py  templates.py
src/web/static/css/: app.css
src/web/templates/: base.html  base_simple.html  config_compare.html  config_detail.html  configs.html  cost_estimator.html  error.html  index.html  share.html
src/web/templates/components/: api_key_modal.html  canvas.html  chat_panel.html
src/web/websocket/: __init__.py  stream.py
tasks/: README.md  ai-research-example.txt  sales-analysis-simple.txt
temp_excel_test/: test.xlsx
tests/: README.md  README_WEBSOCKET_TESTS.md  TESTING_CHECKLIST.md  UI_TESTING_STRATEGY.md  conftest.py  test_agent.py  test_api_contracts.py  test_architect_extraction.py  test_artifact_context.py  test_budget.py  test_config_loader.py  test_connectivity.py  test_context.py  test_context_summarizer.py  test_dspy_modules.py  test_final_assembly.py  test_integration_ollama.py  test_intermediate_checks.py  test_javascript_syntax.py  test_mocklm_complex.py  test_parallel.py  test_parser.py  test_pdf_export.py  test_prompt_file.py  test_repl.py  test_run_context.py  test_services.py  test_signature_prompts.py  test_tools.py  test_web.py  test_web_ui.py  test_websocket_updates.py
tests/e2e/: E2E_IMPLEMENTATION.md  QUICKSTART.md  __init__.py  conftest.py  run_e2e_tests.sh  test_api_keys.py  test_error_handling.py  test_happy_path.py  test_happy_path_TEMPLATE.py
tests/integration/web/: test_api_contracts.py  test_pdf_export.py  test_web.py  test_websocket_updates.py
